Added kafka quickstart